--- a/CmsShoppingCart/Views/Shared/_Layout.cshtml
+++ b/CmsShoppingCart/Views/Shared/_Layout.cshtml
@@ -6,9 +6,10 @@
     <title>@ViewData["Title"] - CmsShoppingCart</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="~/js/site.js"></script>
-   
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script> 
+
+
 
 </head>
 <body>
