Sales,Order to be continued

--- a/CmsShoppingCart/Views/Order/OrderConfirmation.cshtml
+++ b/CmsShoppingCart/Views/Order/OrderConfirmation.cshtml
@@ -1,7 +1,7 @@
 ﻿
 
 <h2>Order Confirmation</h2>
-<p>Dear,
- your order with ID @Model.Id has been received.</p> <br>
- <p>We will deliver your order soon.</p>
+<p>
+   Dear @User.Identity.Name , your order @Model.Name has been received.</p> <br>
+ <p>It will be delivered within 7-10 days.</p>
 
