--- a/CmsShoppingCart/Areas/Admin/Views/Products/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Products/Index.cshtml
@@ -7,7 +7,8 @@
 <h1>Products</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New</a> |
+    <a asp-controller="Products" asp-action="ManageSales" >Sales</a>
 </p>
 <table class="table">
     <thead>
@@ -50,8 +51,9 @@
                       <a asp-action="Edit" asp-route-id ="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id ="@item.Id">Details</a> |
            
-                      <a class = "confirmDeletion" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                      <a class = "confirmDeletion" asp-action="Delete" asp-route-id="@item.Id">Delete</a> 
                     
+              
             </td>
         </tr>
 }
