--- a/CmsShoppingCart/Areas/Admin/Views/Categories/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Categories/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Categories";
 }
 <div class="container" style="position: absolute; top:100px">
-<h1 class="col-md-4 offset-md-2">Categories</h1>
+    <h1 class="col-md-4 offset-md-2" >Categories</h1>
 
 <p>
-    <a asp-action="Create" class="col-md-4 offset-md-2" >Create New</a>
+        <a asp-action="Create" class="col-md-4 offset-md-2" >Create New</a>
 </p>
-<table class="table sorting col-md-6 offset-md-3" id = "categories">
-    <thead>
+    <table class="table sorting col-md-4 offset-md-2" id="categories" style="border:2px solid black; text-align:center;width:60%">
+        <thead style="border:2px solid black;  background-color:orangered">
         <tr>
             
             <th><h2>
@@ -24,7 +24,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+        <tbody style="border:2px solid black; padding:12px">
 @foreach (var item in Model) {
         <tr id="id_@item.Id">
             
