--- a/CmsShoppingCart/Areas/Admin/Views/Products/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Products/Index.cshtml
@@ -10,8 +10,8 @@
     <a asp-action="Create" class="col-md-4 offset-md-2">Create New</a> 
     
 </p>
-<table class="table">
-    <thead>
+<table  class="table col-md-6 offset-md-2" style="border:2px solid black; text-align:center;width:70%;padding:10px">
+    <thead style="border:2px solid black; color:white; background-color:orangered">
         <tr>
             
             <th><h2>
@@ -35,7 +35,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody style="border:2px solid black">
 @foreach (var item in Model) {
         <tr>
          
