--- a/CmsShoppingCart/Areas/Admin/Views/Shared/_Header.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Shared/_Header.cshtml
@@ -1,6 +1,6 @@
-﻿<header>
+﻿<header >
     <div id="kt_app_header" class="app-header "
-         data-kt-sticky="true" data-kt-sticky-activate="{default: true, lg: true}" data-kt-sticky-name="app-header-minimize" data-kt-sticky-offset="{default: '200px', lg: '0'}" data-kt-sticky-animation="false">
+         data-kt-sticky="true" data-kt-sticky-activate="{default: true, lg: true}" data-kt-sticky-name="app-header-minimize" data-kt-sticky-offset="{default: '200px', lg: '0'}" data-kt-sticky-animation="false" style="background-color:black">
         <div class="app-container  container-fluid d-flex align-items-stretch justify-content-between " id="kt_app_header_container">
             <div class="d-flex align-items-center d-lg-none ms-n3 me-1 me-md-2" title="Show sidebar menu">
                 <div class="btn btn-icon btn-active-color-primary w-35px h-35px" id="kt_app_sidebar_mobile_toggle">
@@ -9,10 +9,7 @@
             </div>
            
             <div class="d-flex align-items-stretch justify-content-between flex-lg-grow-1" id="kt_app_header_wrapper">
-                <div class="
-   app-header-menu
-  app-header-mobile-drawer
-                 align-items-stretch"
+                <div class=" app-header-menu app-header-mobile-drawer  align-items-stretch"
                                           
                      data-kt-drawer="true"
                      data-kt-drawer-name="app-header-menu"
@@ -24,37 +21,28 @@
                      data-kt-swapper="true"
                      data-kt-swapper-mode="{default: 'append', lg: 'prepend'}"
                      data-kt-swapper-parent="{default: '#kt_app_body', lg: '#kt_app_header_wrapper'}">
-                    <div class="
-menu
-menu-rounded
-menu-column
-menu-lg-row
-my-5
-my-lg-0
-align-items-stretch
-fw-semibold
-px-2 px-lg-0
-"
+                    <div class="menu menu-rounded menu-column menu-lg-row my-5 my-lg-0 align-items-stretch fw-semibold px-2 px-lg-0"
                          id="kt_app_header_menu"
                          data-kt-menu="true">
                        </div>
                        
                         <!--end:Menu item--><!--begin:Menu item-->
                         <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 me-lg-2">
-                            <!--begin:Menu link--><span class="menu-link"><a class="menu-title text-dark" asp-area="Admin" asp-controller="Categories" asp-action="Index">Categories</a><span class="menu-arrow d-lg-none"></span></span><!--end:Menu link--><!--begin:Menu sub-->
+                            <!--begin:Menu link--><span class="menu-link"><a class="menu-title " asp-area="Admin" asp-controller="Categories" asp-action="Index" style="color:white">Categories</a><span class="menu-arrow d-lg-none"></span></span><!--end:Menu link--><!--begin:Menu sub-->
                         </div>
                         <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 me-lg-2">
-                            <!--begin:Menu link--><span class="menu-link"><a class="menu-title text-dark" asp-area="Admin" asp-controller="Products" asp-action="Index">Products</a><span class="menu-arrow d-lg-none"></span></span><!--end:Menu link--><!--begin:Menu sub-->
+                            <!--begin:Menu link--><span class="menu-link"><a class="menu-title " asp-area="Admin" asp-controller="Products" asp-action="Index" style="color:white">Products</a><span class="menu-arrow d-lg-none"></span></span><!--end:Menu link--><!--begin:Menu sub-->
                         </div>
                         <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 me-lg-2">
-                            <!--begin:Menu link--><span class="menu-link"><a class="menu-title text-dark" asp-area="Admin" asp-controller="Users" asp-action="Index">Users</a><span class="menu-arrow d-lg-none"></span></span><!--end:Menu link--><!--begin:Menu sub-->
+                        <!--begin:Menu link--><span class="menu-link"><a class="menu-title " asp-area="Admin" asp-controller="Users" asp-action="Index" style="color:white">Users</a><span class="menu-arrow d-lg-none"></span></span><!--end:Menu link--><!--begin:Menu sub-->
                         </div>
                         <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 me-lg-2">
-                        <!--begin:Menu link--><span class="menu-link"><a class="menu-title text-dark" asp-area="Admin" asp-controller="Roles" asp-action="Index">Roles</a><span class="menu-arrow d-lg-none"></span></span><!--end:Menu link--><!--begin:Menu sub-->
+                        <!--begin:Menu link--><span class="menu-link"><a class="menu-title" asp-area="Admin" asp-controller="Roles" asp-action="Index" style="color:white">Roles</a><span class="menu-arrow d-lg-none"></span></span><!--end:Menu link--><!--begin:Menu sub-->
                         </div>
                         <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion menu-sub-lg-down-indention me-0 me-lg-2">
-                            <!--begin:Menu link--><span class="menu-link"><a class="menu-title btn btn-danger" asp-area="" asp-controller="Account" asp-action="Logout" style="margin-left:500px">LogOut</a><span class="menu-arrow d-lg-none"></span></span><!--end:Menu link--><!--begin:Menu sub-->
+                            <!--begin:Menu link--><span class="menu-link"><a class="menu-title btn btn-danger" asp-area="" asp-controller="Account" asp-action="Logout" style="margin-left:590px">LogOut</a><span class="menu-arrow d-lg-none"></span></span><!--end:Menu link--><!--begin:Menu sub-->
                         </div>
+
                         <!--end:Menu item--><!--begin:Menu item-->
                         <div data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="bottom-start" class="menu-item menu-lg-down-accordion me-0 me-lg-2">
                             
