--- a/CmsShoppingCart/Views/Order/OrderConfirmation.cshtml
+++ b/CmsShoppingCart/Views/Order/OrderConfirmation.cshtml
@@ -9,13 +9,15 @@
        
 
 
-form {
+.order {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     width: 300px;
-    text-align: center;
+    
+       margin: 0 auto;
+     text-align: left;
 }
 h2{
     text-align: left;
@@ -39,32 +41,13 @@ input[type="tel"] {
 }
 
 
-button[type="submit"] {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button[type="submit"]:hover {
-    background-color: #0056b3;
-}
-
-form {
-    margin: 0 auto;
-    text-align: left;
-}
-
     </style>
 </head>
 <body>
     <h2>Customer Information Form</h2>
     <div class="row">
         <div class="col-md-5">
-            <form asp-action="PlaceOrder">
+            <form asp-action="PlaceOrder" class="order">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                 <div class="form-group">
@@ -88,7 +71,7 @@ form {
                     <span asp-validation-for="Address" class="text-danger"></span>
                   </div>
                 <div class="form-group">
-                    <input type="submit" value="Submit" class="btn btn-primary" />
+                    <input type="submit" value="Submit" class="gray-button rounded" />
                 </div>
             </form>
         </div>
