--- a/CmsShoppingCart/Views/Shared/_Layout.cshtml
+++ b/CmsShoppingCart/Views/Shared/_Layout.cshtml
@@ -8,61 +8,116 @@
     <link rel="stylesheet" href="~/css/site.css" />
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script> 
+<style>
 
+        .profile {
+            text-align: center;
+            cursor: pointer;
+        }
+
+        .popup-card {
+            display: none;
+            position: fixed;
+            top: 100px;
+            right: 20px;
+            background-color: white;
+            padding: 20px;
+            box-shadow: 0 2px 4px rgb(255,165,0);
+            width: 200px;
+            border-radius: 10px;
+            z-index:2;
+        }
+
+            .popup-card img {
+                width: 100px;
+                height: 100px;
+                border-radius: 50%;
+            }
+
+        .close-button {
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            cursor: pointer;
+            font-size: 20px;
+            color: black;
+        }
+
+        .popup-card.show {
+            display: block;
+        }
+
+     
+    </style>
 
 
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-custom">
-            <div class="container" >
-                <a class="navbar-brand" href="/" ><strong>CmsShoppingCart</strong></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation" >
-                    <span class="navbar-toggler-icon"></span>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-top box-shadow mb-3 bg-custom">
+            <div class="container">
+                <div class="name">
+                  
+                    <a class="navbar-brand text-light" asp-area="" asp-controller="Products" asp-action="Index"><strong>CmsShoppingCart</strong></a>
+                </div>
+                <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon text-light"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" >
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1 justify-content-end">
-                      
-                        @if(User?.Identity?.IsAuthenticated ?? false)
+                        @if (User?.Identity?.IsAuthenticated ?? false)
                         {
-                           
-
-                           <li class="nav-item">
-                                <a asp-controller="Account" asp-action="Edit" class="btn" style="background-color:lightgray">My Account</a>
-
-                            </li>
-                           
-                            
-                            <li class="nav-item ml-1">
-                                <a asp-controller="Account" asp-action="Logout" class="btn" style="background-color:dimgrey">Hi, @User.Identity.Name, Log out</a>
-
+                            <li class="justify-content-end mt-4 mr-1">
+                                <form asp-controller="Products" asp-action="Search" method="get">
+                                    <input type="text" style="width: 150px; height: 30px" name="searchTerm" placeholder="Search...">
+                                    <button class="gray-button rounded" type="submit">Search</button>
+                                </form>
                             </li>
 
-                            @if (User.IsInRole("admin") || User.IsInRole("editor"))
-                            {
-                                <li class="nav-item ml-1">
-                                    <a asp-area="Admin" asp-controller="Pages" asp-action="Index" class="btn" style="background-color:lightyellow">Admin Area</a>
-
-                                </li>
-                            }
-
+                            <div class="profile">
+                                <img src="~/images/profile.png" alt="Profile Picture" id="profile-picture" style="width:100px; height:100px; border-radius: 50%">
+                            </div>
+                            <div class="popup-card" id="profile-card">
+                                <div class="profile-info">
+                                    <span id="close-button" class="close-button">X</span>
+                                    <img src="~/images/profile.png" alt="Profile Picture" style="width:100px; height:100px">
+                                    <h1>@User.Identity.Name</h1>
+                                    <ul>
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Edit" class="btn">Account</a>
+                                        </li>
+                                        <li>
+                                            <a asp-controller="Account" asp-action="Logout" class="btn ">
+                                                LogOut
+                                            </a>
+                                        </li>
+                                        @if (User.IsInRole("admin") || User.IsInRole("editor"))
+                                        {
+                                            <li class="nav-item mt-1 mr-1">
+                                                <a asp-area="Admin" asp-controller="Pages" asp-action="Index" class="btn">
+                                                    AdminArea
+                                                </a>
+                                            </li>
+                                        }
+                                    </ul>
+                                </div>
+                            </div>
                         }
+
                         else
                         {
                             <li class="nav-item">
-                                <a asp-controller="Account" asp-action="Login" class="btn " style="background-color:lightyellow">Log in</a>
-
+                                <a asp-controller="Account" asp-action="Login" class="btn" style="background-color:lightyellow">
+                                    Log in
+                                </a>
                             </li>
                             <li class="nav-item ml-1">
-                                <a asp-controller="Account" asp-action="Register" class="btn" style="background-color:lightgray">Register</a>
-
+                                <a asp-controller="Account" asp-action="Register" class="btn" style="background-color:lightgray">
+                                    Register
+                                </a>
                             </li>
-                           
                         }
-
-                       
-
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
                         @await Component.InvokeAsync("MainMenu")
@@ -75,15 +130,15 @@
         <main role="main" class="pb-3">
             <partial name="_NotificationPartail" />
             <div class="row">
-               <div class="col-3">
-                  @await Component.InvokeAsync("Categories")
-                  <div class="smallcart bg-warning mt-3 p-3 text-white">
+                <div class="col-3">
+                    @await Component.InvokeAsync("Categories")
+                    <div class="smallcart bg-warning mt-3 p-3 text-white">
                         @await Component.InvokeAsync("SmallCart")
-                  </div>
-               </div>
-            
-              <div class="col">
-              @RenderBody()
+                    </div>
+                </div>
+
+                <div class="col">
+                    @RenderBody()
                 </div>
             </div>
         </main>
@@ -94,12 +149,25 @@
             &copy; 2023 - CmsShoppingCart - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-   
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    
-    <script src="~/js/site.js" asp-append-version="true"></script>
 
-    @RenderSection("Scripts", required: false)
+    <script>
+        const profilePicture = document.getElementById("profile-picture");
+        const profileCard = document.getElementById("profile-card");
+        const closeButton = document.getElementById("close-button");
+
+        profilePicture.addEventListener("click", function () {
+            profileCard.style.display = "block";
+        });
+
+        closeButton.addEventListener("click", function () {
+            profileCard.style.display = "none";
+        });
+
+    </script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+                    @RenderSection("Scripts", required: false)
+
 </body>
 </html>
+
