--- a/CmsShoppingCart/Views/Products/Index.cshtml
+++ b/CmsShoppingCart/Views/Products/Index.cshtml
@@ -14,7 +14,9 @@
     .card-size {
         height: 300px;
         width: 220px;
+        margin: 10px;
     }
+
 </style>
 
 <h1 class ="display-4 pb-3"><strong>All Products</strong></h1>
