--- a/CmsShoppingCart/Views/Shared/_Layout.cshtml
+++ b/CmsShoppingCart/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
             <div class="container">
                 <div class="name">
                   
-                    <a class="navbar-brand text-light" asp-area="" asp-controller="Products" asp-action="Index"><strong>CmsShoppingCart</strong></a>
+                    <a class="navbar-brand" style="color:orangered" asp-area="" asp-controller="Products" asp-action="Index"><strong>CmsShoppingCart</strong></a>
                 </div>
                 <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -145,7 +145,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container" style="  margin-top: auto;">
             &copy; 2023 - CmsShoppingCart - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
