--- a/CmsShoppingCart/Views/Shared/Components/MainMenu/Default.cshtml
+++ b/CmsShoppingCart/Views/Shared/Components/MainMenu/Default.cshtml
@@ -5,7 +5,7 @@
         @if(item.Slug != "home")
 
        { <li class="nav-item">
-            <a class="nav-link text-white" asp-area="" asp-controller="Pages" asp-action="Page" 
+            <a class="nav-link text-dark" style="font-weight:bolder" asp-area="" asp-controller="Pages" asp-action="Page" 
             asp-route-slug="@item.Slug">@item.Title </a>
  
             </li>
