--- a/CmsShoppingCart/Areas/Admin/Views/Roles/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Roles/Index.cshtml
@@ -39,8 +39,12 @@
             
            
             <td>
-                <a asp-action="Edit" asp-route-id ="@role.Id">Edit</a> |
-                    <a class = "confirmDeletion" asp-action="Delete" asp-route-id="@role.Id">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@role.Id">
+                            <i class="bi bi-pencil"></i>
+                        </a>|
+                        <a class=" confirmDeletion" asp-action="Delete" asp-route-id="@role.Id">
+                            <i class="bi bi-trash"></i>
+                        </a>
                   
             </td>
         </tr>
