--- a/CmsShoppingCart/Areas/Admin/Views/Categories/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Categories/Index.cshtml
@@ -36,10 +36,12 @@
                 </td>
           
             <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-               
-                  
-              <a class="confirmDeletion" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="Edit" asp-route-id="@item.Id">
+                            <i class="bi bi-pencil"></i>
+                        </a>|
+                        <a class=" confirmDeletion" asp-action="Delete" asp-route-id="@item.Id">
+                            <i class="bi bi-trash"></i>
+                        </a>
                     
             </td>
         </tr>
