--- a/CmsShoppingCart/Areas/Admin/Views/Order/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Order/Index.cshtml
@@ -22,7 +22,11 @@
                 <td>@order.ProductName</td>
                 <td>@order.PhoneNumber</td>
                 <td>@order.Address</td>
-               <td> <a class="confirmDeletion"  asp-asp-controller="Order" asp-action="Delete" asp-route-id="@order.Id">Delete</a> </td>
+                    <td>
+                        <a class=" confirmDeletion" asp-action="Delete" asp-route-id="@order.Id">
+                            <i class="bi bi-trash"></i>
+                        </a>
+                    </td>
             </tr>
             
         }
