--- a/CmsShoppingCart/Areas/Admin/Views/Pages/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Pages/Index.cshtml
@@ -36,11 +36,19 @@
             </td>
            
             <td>
-                <a asp-action="Edit" asp-route-id ="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id ="@item.Id">Details</a> |
+                
+                        <a asp-action="Edit" asp-route-id="@item.Id">
+                            <i class="bi bi-pencil"></i> 
+                        </a>|
+                        <a asp-action="Details" asp-route-id ="@item.Id">
+                            <i class="bi bi-info-circle"></i>
+                        </a>|
                   @if(item.Slug != "home")
                   {
-                    <a class = "confirmDeletion" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                   
+                            <a class=" confirmDeletion" asp-action="Delete" asp-route-id="@item.Id">
+                                <i class="bi bi-trash"></i> 
+                            </a>
                   }
             </td>
         </tr>
