--- a/CmsShoppingCart/Areas/Admin/Views/Products/Details.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Products/Details.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Product Details";
 }
-
+<div class="container" style="position: absolute; top:100px">
 <h1 class="col-md-4 offset-md-2">Product Details</h1>
 
 <div class="col-md-8 offset-md-2">
@@ -53,6 +53,7 @@
             <img src="~/media/products/@Model.Image" width="200" />
         </dd>
     </dl>
+</div>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
