--- a/CmsShoppingCart/Areas/Admin/Views/Products/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Products/Index.cshtml
@@ -53,12 +53,20 @@
                 <img src="~/media/products/@item.Image" width="100" />
             </td>
             <td>
-                      <a asp-action="Edit" asp-route-id ="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id ="@item.Id">Details</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id">
+                        <i class="bi bi-pencil"></i>
+                    </a>|
+                    <a asp-action="Details" asp-route-id="@item.Id">
+                        <i class="bi bi-info-circle"></i>
+                    </a>|
 
-           
-                      <a class = "confirmDeletion" asp-action="Delete" asp-route-id="@item.Id">Delete</a> |
-                    <a asp-controller="Products" asp-action="EditPrice" asp-route-id="@item.Id">Discount</a>
+
+                    <a class=" confirmDeletion" asp-action="Delete" asp-route-id="@item.Id">
+                        <i class="bi bi-trash"></i>
+                    </a> |
+                    <a asp-controller ="Products" asp-action="EditPrice" asp-route-id="@item.Id">
+                        <i class="bi bi-dollar">Discount</i> 
+                    </a>
                     
               
             </td>
