--- a/CmsShoppingCart/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 		<meta property="og:site_name" content="CmsShoppingCart" />
     
 	<!--	<link rel="shortcut icon" href="~/metronic/media/logos/favicon.ico"/> -->
-
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.2/dist/css/bootstrap.min.css">
 		<!--begin::Fonts(mandatory for all pages)-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700"/>        <!--end::Fonts-->
 
