--- a/CmsShoppingCart/Views/Account/Login.cshtml
+++ b/CmsShoppingCart/Views/Account/Login.cshtml
@@ -26,7 +26,7 @@
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Log in" class="btn" style="background-color:lightgray" />
+                <input type="submit" value="Log in" class="btn" style="background-color:lightyellow" />
             </div>
         </form>
     </div>
