--- a/CmsShoppingCart/Views/Account/Register.cshtml
+++ b/CmsShoppingCart/Views/Account/Register.cshtml
@@ -27,7 +27,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Register" class="btn" style="background-color:lightgray" />
+                <input type="submit" value="Register" class="btn" style="background-color:darkgray" />
             </div>
         </form>
     </div>
