--- a/CmsShoppingCart/Views/Products/Index.cshtml
+++ b/CmsShoppingCart/Views/Products/Index.cshtml
@@ -6,8 +6,8 @@
 }
 <style>
     .product-image {
-        width: 100px;
-        height: 100px;
+        width: 120px;
+        height: 120px;
         object-fit: cover;
     }
 
@@ -15,7 +15,10 @@
         height: 300px;
         width: 220px;
         margin: 10px;
+       
     }
+
+   
 
 </style>
 
@@ -26,8 +29,8 @@
     <div class="col-12">
         <div class="btn-group mb-3">
             <label class="mr-2">Sort by: </label>
-            <a href="/products?categorySlug=@ViewBag.CategorySlug&sortOrder=price_asc" class="btn btn-outline-warning">Price Ascending</a>
-            <a href="/products?categorySlug=@ViewBag.CategorySlug&sortOrder=price_desc" class="btn btn-outline-warning">Price Descending</a>
+            <a href="/products?categorySlug=@ViewBag.CategorySlug&sortOrder=price_asc" class="btn btn-outline-warning"><strong>Price Ascending</strong></a>
+            <a href="/products?categorySlug=@ViewBag.CategorySlug&sortOrder=price_desc" class="btn btn-outline-warning"><strong>Price Descending</strong></a>
         </div>
     </div>
 </div>
@@ -66,48 +69,17 @@
                     </div>
           </div>
           
-                     <!-- <button type="button" class="btn" style="background-color:orangered" data-bs-toggle="modal" data-bs-target="#discountModal">
-                        Discount
-                    </button>
-                 <form>
-                <div class="modal fade" id="discountModal" tabindex="-1" aria-labelledby="discountModalLabel" aria-hidden="false">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="discountModalLabel">Product Details</h5>
-                            </div>
-                            <div class="modal-body">
-                                <form action="/Discount" method="post">
-                                    <input type="hidden" id="product-id" value="1">
-                                    <input type="hidden" id="product-price" > -->
-
-                                    
-                                <!--    <p>Product Price: $<span id="displayed-price">@item.Price</span></p>
-                                    
-                                    <label for="discount-code-input">Enter Discount Code:</label>
-                                    <input type="text" id="discount-code-input">
-
-                                     <button asp-controller="Cart" asp-action="Discount" id="add-to-cart-button" class="btn btn-warning">Add to cart</button>
-
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                </form> -->
-
-            
-
-            
+         
         
                 }
     
     
     @if (ViewBag.TotalPages > 1)
     {
-    <div class="d-flex w-100 justify-content-center"> 
-<pagination page-count="@ViewBag.TotalPages" page-target="/products" 
-page-number="@ViewBag.PageNumber" page-range="@ViewBag.PageRange"></pagination></div>
+    <div class="d-flex w-100 justify-content-center" > 
+<pagination page-count="@ViewBag.TotalPages" page-target="/products"
+                        page-number="@ViewBag.PageNumber" page-range="@ViewBag.PageRange"></pagination>
+        </div>
 
     }
 </div>
@@ -131,47 +103,20 @@ page-number="@ViewBag.PageNumber" page-range="@ViewBag.PageRange"></pagination><
             ajaxDiv.animate({opacity: 0}, function(){
                 $(this).addClass("d-none").fadeTo(.1, 1);
                 $(this).find("img").removeClass("d-none");
-                  $(this).find("p").addClass("d-none");
+    
+                $(this).find("p").addClass("d-none");
+         
+            
+            
             })
-        })
-           });
 
-
-       });
         });
 
-             $(document).ready(function () {
-        $("#add-to-cart-button").click(function () {
-            var productId = $("#product-id").val();
-            var productPrice = parseFloat($("#product-price").val());
-            var discountCode = $("#discount-code-input").val().trim();
 
-            // Send an AJAX request to the server to add the product to the cart
-            $.ajax({
-                type: "POST",
-                url: "/Cart/AddToCart",
-                data: {
-                    productId: productId,
-                    productPrice: productPrice,
-                    discountCode: discountCode
-                },
-                success: function (data) {
-                    if (data.success) {
-                        alert(data.message);
+     
 
-                        // Update the product price on the page
-                        var finalPrice = data.finalPrice;
-                        $("#product-price").val(finalPrice.toFixed(2));
-                    } else {
-                        alert("Failed to add product to cart.");
-                    }
-                },
-                error: function () {
-                    alert("An error occurred while adding the product to the cart.");
-                }
-            });
-        });
-    });
+           
+       
     </script>
  
 }
