--- a/CmsShoppingCart/Areas/Admin/Views/Shared/_SideBar.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Shared/_SideBar.cshtml
@@ -2,7 +2,7 @@
 	<div id="kt_app_sidebar" class="app-sidebar flex-column "
 		 data-kt-drawer="true" data-kt-drawer-name="app-sidebar" data-kt-drawer-activate="{default: true, lg: false}" data-kt-drawer-overlay="true" data-kt-drawer-width="225px" data-kt-drawer-direction="start" data-kt-drawer-toggle="#kt_app_sidebar_mobile_toggle" style="background-color:black">
 		<div class="app-sidebar-logo px-6" id="kt_app_sidebar_logo">
-			<a asp-controller="Products" asp-action="Index">
+		<div class="justify-content" style="display: flex; align-items: center;">	<a asp-controller="Products" asp-action="Index">
 				<img style="
             width: 120px; 
             height: auto; 
@@ -10,9 +10,9 @@
             margin: 0 auto;
             padding: 10px;
             border: 2px solid #000; 
-            border-radius: 10px;/
-        " src="~/images/logo2.jpg" />
-			</a>
+            border-radius: 10px;/  " src="~/images/metronic.png" />
+			</a><p style="color:white;margin-left: 10px;"><strong>Metronic</strong></p>
+	  </div>
 			<div id="kt_app_sidebar_toggle"
 				 class="app-sidebar-toggle btn btn-icon btn-shadow btn-sm btn-color-muted btn-active-color-primary h-30px w-30px position-absolute top-50 start-100 translate-middle rotate "
 				 data-kt-toggle="true"
