--- a/CmsShoppingCart/Views/Products/Index.cshtml
+++ b/CmsShoppingCart/Views/Products/Index.cshtml
@@ -15,9 +15,20 @@
         height: 300px;
         width: 220px;
         margin: 10px;
+        background-color: #fff;
+        border: 1px solid black;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+        transition: transform 0.3s, box-shadow 0.3s;
        
     }
 
+
+
+        .card-size:hover {
+            transform: scale(1.05); 
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Darker shadow on hover */
+            cursor: pointer;
+        }
    
 
 </style>
@@ -38,6 +49,7 @@
   <div class="row">
     @foreach( var item in Model) {
         <div class="col-6">
+           
             <div class="ajaxbg d-none">
                 <img src="~/images/ajaxloading.gif" />
                 <p class="lead alert alert-success text-center d-none">The product has been added!</p>
@@ -67,9 +79,7 @@
                     </div>
                     </div>
                     </div>
-          </div>
-          
-         
+         </div>
         
                 }
     
