--- a/CmsShoppingCart/Areas/Admin/Views/Categories/Index.cshtml
+++ b/CmsShoppingCart/Areas/Admin/Views/Categories/Index.cshtml
@@ -52,6 +52,21 @@
 @section Scripts {
 
     <script>
+        $(function () {
+            if ($("a.confirmDeletion").length) {
+                $("a.confirmDeletion").click(() => {
+                    if (!confirm("Confirm deletion")) return false;
+                });
+            }
+
+            if ($("div.alert.notification").length) {
+                setTimeout(() => {
+                    $("div.alert.notification").fadeOut();
+
+                }, 2000);
+            }
+        });
+
         $("table#categories tbody").sortable({
             itmes: "tr:not(.home)",
             placeholder: "ui-state-highlight",
