--- a/CmsShoppingCart/Views/Products/ProductByCategory.cshtml
+++ b/CmsShoppingCart/Views/Products/ProductByCategory.cshtml
@@ -15,7 +15,19 @@
         height: 300px;
         width: 220px;
         margin: 10px;
+        background-color: #fff;
+        border: 1px solid black;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+        transition: transform 0.3s, box-shadow 0.3s;
     }
+
+
+
+        .card-size:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Darker shadow on hover */
+            cursor: pointer;
+        }
 </style>
 <h1 class="display-4 pb-5"><strong>@ViewBag.CategoryName</strong></h1>
 <div class="row">
